force-app/main/default/objects/SpecialtySkill__c/SpecialtySkill__c.object-meta.xml
<CustomObject>
    <label>Specialty Skill</label>
    <nameField>
        <label>SpecialiSkill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specialty Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>