force-app/main/default/objects/SpecialtySkill__c/fields/AttackingMountedTroop__c.field-meta.xml
<CustomField>
    <fullName>AttackingMountedTroop__c</fullName>
    <label>Attacking Mounted Troop</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>