force-app/main/default/objects/SpecialtySkill__c/fields/EnemyRangedTroopAttack__c.field-meta.xml
<CustomField>
    <fullName>EnemyRangedTroopAttack__c</fullName>
    <label>Enemy Ranged Troop Attack</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>