force-app/main/default/objects/SpecialtySkill__c/fields/GroundTroopHP__c.field-meta.xml
<CustomField>
    <fullName>GroundTroopHP__c</fullName>
    <label>Ground Troop HP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>