force-app/main/default/objects/SpecialtySkill__c/fields/MarchingGroundTroopHP__c.field-meta.xml
<CustomField>
    <fullName>MarchingGroundTroopHP__c</fullName>
    <label>Marching Ground Troop HP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>