force-app/main/default/objects/SpecialtySkill__c/fields/MarchingMountedTroopAttack__c.field-meta.xml
<CustomField>
    <fullName>MarchingMountedTroopAttack__c</fullName>
    <label>Marching Mounted Troop Attack</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>