force-app/main/default/objects/SpecialtySkill__c/fields/MarchingMountedTroopHP__c.field-meta.xml
<CustomField>
    <fullName>MarchingMountedTroopHP__c</fullName>
    <label>Marching Mounted Troop HP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>