force-app/main/default/objects/SpecialtySkill__c/fields/MountedTroopAttack__c.field-meta.xml
<CustomField>
    <fullName>MountedTroopAttack__c</fullName>
    <label>Mounted Troop Attack</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>