force-app/main/default/objects/SpecialtySkill__c/fields/MountedTroopDefense__c.field-meta.xml
<CustomField>
    <fullName>MountedTroopDefense__c</fullName>
    <label>Mounted Troop Defense</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>