force-app/main/default/objects/SpecialtySkill__c/fields/MountedTroopHP__c.field-meta.xml
<CustomField>
    <fullName>MountedTroopHP__c</fullName>
    <label>Mounted Troop HP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>