force-app/main/default/objects/SpecialtySkill__c/fields/RangedTroopHP__c.field-meta.xml
<CustomField>
    <fullName>RangedTroopHP__c</fullName>
    <label>Ranged Troop HP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>